--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <p class="section__caption">In Anishinabe Ahjibeck Means Mountain</p>
                         <h4 class="section__caption">Data Visualization Specialists</h4>
                            <br />
-<h4 class ="section_caption"> We will bring your  organization's data and story alive and sing to the mountains</h4>
+<h4 class ="section_caption"> We bring life to your organization's data and sing your story to the mountains</h4>
                     </div>
                   </div>
                   <div class="overflow-hidden">
