--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     data-animation-out="fadeOutDown"
                     data-animation-out-delay="300">
                       <figure class="carousel__item-figure">
-                          <a href="https://intense-retreat-56602.herokuapp.com/" title="Green Thumbs">
+                        <a href="https://wlavell2016.github.io/FWB_Landing/Map.html" title="Circles of care Map">
                           <img class="carousel__item-figure-media" src="assets/img/item/portfolio-03.jpg" alt="">
                           <div class="carousel__item-figcaption">
                             <h4 class="carousel__item-figcaption-title">Bootstrap CSS NGO Website</h4>
@@ -677,7 +677,7 @@
                     data-animation-out="fadeOutDown2"
                     data-animation-out-delay="400">
                       <p class="section__caption">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in scelerisque nisi, a convallis nibh. Etiam posuere faucibus.
+                        Send us a message we look forward to hearing from you.
                       </p>
                     </div>
                   </div>
@@ -699,7 +699,7 @@
                         </div>
                         <div class="media-body">
                           <h3>Phone number</h3>
-                          <p>(Tel) 123-456-7890</p>
+                          <p>(Tel)099-349-2445</p>
                         </div>
                       </div> <!-- .media -->
 
@@ -710,7 +710,7 @@
                         </div>
                         <div class="media-body">
                           <h3>Email address</h3>
-                          <p>email@example.com</p>
+                          <p>william.lavell@gmail.com</p>
                         </div>
                       </div> <!-- .media -->
 
@@ -721,7 +721,7 @@
                         </div>
                         <div class="media-body">
                           <h3>Location</h3>
-                          <p>631 Main Street Cottage, Long Branch, P.O Box 55016.</p>
+                          <p>14 Siri Mangkalajarn Lane 11, , Muang, Chiang Mai 50200, Chiang Mai Thailand.</p>
                         </div>
                       </div> <!-- .media -->
                     </div>
