--- a/index.html
+++ b/index.html
@@ -482,6 +482,24 @@
                       </figure>
                     </div> <!-- .carousel__item -->
 
+
+                    <div class="carousel__item" data-animation-in="fadeInUp" data-animation-in-delay="800" data-animation-out="fadeOutDown" data-animation-out-delay="300">
+                      <figure class="carousel__item-figure">
+                        <a href="https://mindedu.com/" title="Circles of care Map">
+                          <img class="carousel__item-figure-media" src="assets/img/item/portfolio-11.jpg" alt="">
+                          <div class="carousel__item-figcaption">
+                            <h4 class="carousel__item-figcaption-title">MindEDU Parental Education</h4>
+                            <div class="carousel__item-figcaption-meta">
+                              <p>MindEDU Parental Education:</p>
+                              <span>Online Learning Portal for Parents</span>
+                            </div>
+                          </div>
+                        </a>
+                      </figure>
+                    </div> <!-- .carousel__item -->
+
+
+
                     <div class="carousel__item" data-animation-in="fadeInUp" data-animation-in-delay="800" data-animation-out="fadeOutDown" data-animation-out-delay="300">
                       <figure class="carousel__item-figure">
                         <a href="https://wlavell2016.github.io/miniature-broccoli/" title="bonaparteindianband">
