--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                         </div>
                         <div class="media-body">
                           <h3>Phone number</h3>
-                          <p></p>
+                          <p>099-349-2445</p>
                         </div>
                       </div> <!-- .media -->
 
@@ -674,7 +674,7 @@
                         </div>
                         <div class="media-body">
                           <h3>Email address</h3>
-                          <p></p>
+                          <p>william.lavell@gmail.com</p>
                         </div>
                       </div> <!-- .media -->
 
