added google verification

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
   <!--[if lte IE 9]><!-->
   <script src='assets/js/vendor/html5shiv.min.js'></script>
+  <meta name="google-site-verification" content="D9_VlpNyD6YX8Q8mUzwXv9rHhq4AWgLul24SR3sTCUE" />
   <!--<![endif]-->
 </head>
 
