--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                         </div>
                         <div class="media-body">
                           <h3>Email address</h3>
-                          <p>william.lavell@gmail.com</p>
+                          <p>@gmail.com</p>
                         </div>
                       </div> <!-- .media -->
 
