--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 main-title">
-          <h1>Website</h1>
-          <h2>under construction</h2>
+          <h1>Please go to</h1>
+          <h2>https://govgd.sharepoint.com/sites/SpotLight/SitePages/VAWG-Dashboard.aspx</h2>
         </div>
       </div>
       <div class="row align-items-center">
